# agentrem

./: .gitignore  INSTRUCTIONS.md  README.md  agentrem.py  llms-full.txt  llms.txt  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
assets/Agentrem.app/Contents/: Info.plist
assets/Agentrem.app/Contents/MacOS/: agentrem-notify
assets/Agentrem.app/Contents/Resources/: AppIcon.icns
assets/Agentrem.app/Contents/_CodeSignature/: CodeResources
assets/notify-src/: main.swift
docs/: index.html  llms-full.txt  llms.txt
examples/: openclaw-bootstrap-hook.HOOK.md  openclaw-bootstrap-hook.js  openclaw-keyword-hook.HOOK.md  openclaw-keyword-hook.js
scripts/: build-notify.sh
src/: api.ts  check-watch.ts  core.ts  date-parser.ts  db.ts  index.ts  notifier.ts  notify.ts  service.ts  types.ts  watch.ts
src/mcp/: prompts.ts  resources.ts  server.ts  tools.ts
tests/: api.test.ts  check-watch.test.ts  core.test.ts  date-parser.test.ts  db.test.ts  mcp.test.ts  notifier.test.ts  notify.test.ts  on-fire.test.ts  test_agentrem.py  watch-gc-error.test.ts  watch.test.ts
