[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentrem"
version = "0.1.0"
description = "Structured reminders CLI for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Dushyant Garg"}
]
keywords = ["ai", "agent", "reminders", "cli", "sqlite", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
dates = ["python-dateutil>=2.8"]

[project.scripts]
agentrem = "agentrem:main"

[project.urls]
Homepage = "https://github.com/fraction12/agentrem"
Repository = "https://github.com/fraction12/agentrem"
Issues = "https://github.com/fraction12/agentrem/issues"
